--- a/TitaniumEagleCore/TitaniumEagleCore.csproj
+++ b/TitaniumEagleCore/TitaniumEagleCore.csproj
@@ -39,6 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Action.cs" />
+    <Compile Include="Character.cs" />
+    <Compile Include="Equipment.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
